# neuro-trader

./: .gitignore  README.md  build.py  classified_figure_EURUSD.txt  classifier.pyw  config.ini  data_EURUSD  main.pyw  model_buy_EURUSD.txt  pyproject.toml  requirements.txt  test.py  test_cosine_similarity.py  test_decision_tree.py  test_ensemble_knn.py  test_fall.py  test_knn.py  test_linear_svc.py  test_naive_bayes.py  test_neural_network.py  tester.pyw
api/: pyproject.toml  requirements.txt  vercel.json
api/api/: airmodels.py  enums.py  forms.py  main.py  routes.py
corelib/: pyproject.toml
corelib/corelib/: constants.py  datatypes.py  mt5client.py  utils.py
dashboard/: .gitignore  Makefile  classified_figure_EURUSD.txt  classified_figure_NZDUSD.txt  classifier.pyw  config.ini  data_EURUSD  data_NZDUSD  eurusd_d1_model.keras  eurusd_h4_model.keras  generate_entry_points.py  load_timeseries.py  loaded_timeseries_eurusd  predict_timeseries.py  process_timeseries.py  process_timeseries_new.py  pyproject.toml  search_entry_points.py  search_patterns.py
dashboard/classified_patterns/: 60_eurusd_cont_buy_matches_10_st_0_tp_100.txt  60_eurusd_cont_buy_matches_127_st_32_tp_68.txt  60_eurusd_cont_buy_matches_12_st_33_tp_67.txt  60_eurusd_cont_buy_matches_13_st_15_tp_85.txt  60_eurusd_cont_buy_matches_13_st_23_tp_77.txt  60_eurusd_cont_buy_matches_15_st_20_tp_80.txt  60_eurusd_cont_buy_matches_16_st_0_tp_100.txt  60_eurusd_cont_buy_matches_18_st_17_tp_83.txt  60_eurusd_cont_buy_matches_191_st_0_tp_100.txt  60_eurusd_cont_buy_matches_346_st_0_tp_100.txt  60_eurusd_cont_buy_matches_46_st_13_tp_87.txt  60_eurusd_cont_buy_matches_52_st_13_tp_87.txt  60_eurusd_cont_buy_matches_58_st_12_tp_88.txt  60_eurusd_cont_buy_matches_58_st_5_tp_95.txt  60_eurusd_cont_buy_matches_74_st_31_tp_69.txt  60_eurusd_cont_buy_matches_87_st_28_tp_72.txt  60_eurusd_cont_buy_matches_8_st_12_tp_88.txt  60_eurusd_cont_sell_matches_1026_st_30_tp_70_mirror.txt  60_eurusd_cont_sell_matches_1030_st_33_tp_67_mirror.txt  60_eurusd_cont_sell_matches_10_st_20_tp_80_mirror.txt  60_eurusd_cont_sell_matches_1105_st_6_tp_94_mirror.txt  60_eurusd_cont_sell_matches_1107_st_27_tp_73_mirror.txt  60_eurusd_cont_sell_matches_112_st_12_tp_88_mirror.txt  60_eurusd_cont_sell_matches_119_st_21_tp_79_mirror.txt  60_eurusd_cont_sell_matches_11_st_0_tp_100_mirror.txt  60_eurusd_cont_sell_matches_12_st_8_tp_92_mirror.txt  60_eurusd_cont_sell_matches_131_st_8_tp_92_mirror.txt  60_eurusd_cont_sell_matches_134_st_7_tp_93_mirror.txt  60_eurusd_cont_sell_matches_135_st_19_tp_81_mirror.txt  60_eurusd_cont_sell_matches_143_st_34_tp_66_mirror.txt  60_eurusd_cont_sell_matches_148_st_27_tp_73_mirror.txt  60_eurusd_cont_sell_matches_14_st_0_tp_100_mirror.txt  60_eurusd_cont_sell_matches_14_st_21_tp_79_mirror.txt  60_eurusd_cont_sell_matches_150_st_22_tp_78_mirror.txt  (+333 more)
server/: Makefile  main.py  pyproject.toml  requirements.txt  vercel.json
(+90 files in other folders)
