[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Volodymyr Paslavskyy <volodymyr.paslavskyy@selise.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.23.2"
fastapi = "^0.100.1"
pyairtable = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
