[tool.poetry]
name = "corelib"
version = "0.1.0"
description = ""
authors = ["Volodymyr Paslavskyy <vpaslavskyy@elitex.systems>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.1.3"
sklearn = "^0.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
