[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Volodymyr Paslavskyy <vpaslavskyy@elitex.systems>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.1.3"
pyqt6 = "^6.4.0"
matplotlib = "^3.6.2"
corelib = {path = "../corelib/dist/corelib-0.1.0.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
