[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Volodymyr Paslavskyy <vpaslavskyy@elitex.systems>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
trader-corelib = {path = "../trader-corelib/dist/trader_corelib-0.1.4.tar.gz"}
tensorflow = "2.16.2"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
