[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Volodymyr Paslavskyy <vpaslavskyy@elitex.systems>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
corelib = {path = "../corelib/dist/corelib-0.1.0.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
