[tool.poetry]
name = "server"
version = "0.3.0"
description = ""
authors = ["Volodymyr Paslavskyy <vpaslavskyy@elitex.systems>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.104.0"
numpy = "1.24.0"
uvicorn = {extras = ["standard"], version = "0.19.0"}
mcorelib = "0.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
